--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,17 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.btn{
+  margin: 10px;
+}
+.btn-warning{
+  background-color: orange;
+}
+
+.btn-danger{
+  background-color: red;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
